force-app/main/default/objects/Contact/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <formula>Account.Cost_Center__c</formula>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>