force-app/main/default/objects/Contact/fields/DESKSCMT__Desk_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Customer_Id__c</fullName>
    <description>Desk Id Value</description>
    <label>Desk Customer Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>