force-app/main/default/objects/Contact/fields/DESKSCMT__Desk_Migrated_Contact__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Migrated_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desk Migrated Contact</label>
    <type>Checkbox</type>
</CustomField>