force-app/main/default/objects/Contact/fields/DevCore__Bisnode_Employment_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Employment_Last_Modified_Date__c</fullName>
    <label>Bisnode Employment Last Modified Date</label>
    <type>DateTime</type>
</CustomField>