force-app/main/default/objects/Contact/fields/DevCore__Bisnode_Worksite_Postal_State_Code__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Worksite_Postal_State_Code__c</fullName>
    <label>Bisnode - Worksite Postal State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>