force-app/main/default/objects/Contact/fields/DevCore__BisnodeModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DevCore__BisnodeModifiedDate__c</fullName>
    <label>Bisnode - Employment Update Applied Date</label>
    <type>DateTime</type>
</CustomField>