force-app/main/default/objects/Contact/fields/Firm_Account__c.field-meta.xml
<CustomField>
    <fullName>Firm_Account__c</fullName>
    <formula>TEXT (Account.Firm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm (Account)</label>
    <type>Text</type>
</CustomField>