force-app/main/default/objects/Contact/fields/NPS_Comments__c.field-meta.xml
<CustomField>
    <fullName>NPS_Comments__c</fullName>
    <label>NPS Comments</label>
    <type>TextArea</type>
</CustomField>