force-app/main/default/objects/Contact/fields/NPS_Detractor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Detractor__c</fullName>
    <formula>IF(NPS_Score__c&lt;7,1,0)</formula>
    <label>NPS Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>