force-app/main/default/objects/Contact/fields/NPS_Last_modified_date__c.field-meta.xml
<CustomField>
    <fullName>NPS_Last_modified_date__c</fullName>
    <description>Updated with todays date by a flow everytime the NPS Score field is updated.</description>
    <label>NPS Last modified date</label>
    <type>Date</type>
</CustomField>