force-app/main/default/objects/Contact/fields/NPS_Passive__c.field-meta.xml
<CustomField>
    <fullName>NPS_Passive__c</fullName>
    <formula>IF(AND( NPS_Score__c &gt; 6, NPS_Score__c &lt; 9),1,0)</formula>
    <label>NPS Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>