force-app/main/default/objects/Contact/fields/NPS_Promoter__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoter__c</fullName>
    <formula>IF( NPS_Score__c &gt;8,1,0)</formula>
    <label>NPS Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>