force-app/main/default/objects/Contact/fields/Previous_NPS_Comment__c.field-meta.xml
<CustomField>
    <fullName>Previous_NPS_Comment__c</fullName>
    <description>Updated by a flow to keep the previous comment when the NPS Comment field is updated.</description>
    <label>Previous NPS Comment</label>
    <type>TextArea</type>
</CustomField>