force-app/main/default/objects/Contact/fields/Previous_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Previous_NPS_Score__c</fullName>
    <description>Updated by a flow to keep the previous score when the NPS Score field is updated.</description>
    <label>Previous NPS Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>