force-app/main/default/objects/Contact/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>