force-app/main/default/objects/Contact/listViews/DESKSCMT__Migrated_Contacts.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Migrated_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Desk_Migrated_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Migrated Contacts</label>
</ListView>